# books

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  c-programming-language.pro  configure  configure.ac
PPMPI/: .gitignore  PPMPI.pro
algorithm-in-c/: .gitignore  README.md  algorithm-in-c.pro
algorithm-in-c/chap03/: chap03.pro
algorithm-in-c/chap04/: chap04.pro
algorithm-in-c/chap05/: chap05.pro
algorithm-in-c/chap06/: chap06.pro
algorithm-in-c/chap12/: chap12.pro
autom4te.cache/: output.0  output.1  traces.0  traces.1
c++_primer/: Makefile.am  Makefile.in  README  configure.ac
c-programming-language/: .gitignore  Makefile  README.md  c-programming-language.pro
c-programming-language/chap01/: Makefile
c-programming-language/chap02/: chap02.pro
c-programming-language/chap03/: Makefile  chap03.pro
c-programming-language/chap04/: Makefile  chap04.pro
c-programming-language/chap05/: Makefile  chap05.pro
c-programming-language/chap06/: chap06.pro
c-programming-language/chap07/: chap07.pro  isupper.c
c-programming-language/chap08/: chap08.pro
chap01/: chap01.pro
chap01/08/: Makefile
chap01/11/: solution.txt
chap01/12/: 12.pro  main.c
chap01/14/: 14.pro  Makefile
chap01/15/: Makefile
chap01/17/: Makefile  test.sh
chap01/19/: Makefile
chap01/20/: 20.pro
chap01/21/: input.txt
chap02/: Makefile
chap03/: Makefile
chap05/: Makefile  chap05.pro
cuda-by-example/: ChangLog  README.md  cuda-by-example.pro
solution/chap7/: 06.txt  09.txt  12.cxx  19.cxx  22.txt  24.cxx  4.txt  Makefile.am  Makefile.in
(+699 files in other folders)
